edit search box

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 
         <div class="container  ">
 
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <div class="col-md-6">
 
                     <input type="text" class="text-search form-control " placeholder="Search in this category"
                         id="searchCategory">
                 </div>
-                <div class="col-md-6  position-relative">
+                <!-- <div class="col-md-6  position-relative">
 
                     <input type="text" class="text-search form-control " placeholder="Search a movie" id="searchMovie">
                     <div class="  srearchResults position-absolute" id="srearchResults">
@@ -88,7 +88,7 @@
 
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
